log created 6/22/20

- MVP done. MySQL database connected. Can add question and take quiz
  with any # of questions from 1 - size of db. No error handling.

6/28/20
- created InputHandler class to handle user errors.
- handled input in quizSelection. Created label that notifies user if input is good or bad
- created amount variable in quizSelection to make verifying input possible.
- handled error in quiz if you hit submit without choosing an answer. Label informs user

7/16/22
- In the Add Question page, on submission now clears all text fields, the radio toggle, and prompts the
  user that the question has been submitted.

7/17/22
- Got all specific tasks done from todo list!!!
- Quiz selection page now verifies input on Begin Quiz
- Smaller radios on Quiz page
- Space between radios and text box on Add Question page

7/19/22
- Implemented Categories
    - Created an enum class of available categories
    - Makes it so user can only add to and select from the available categories
    - Changed the Question dao to include a Category
    - Created Category column in SQL database (quizdb)
- Add Question Page
    - Displays a list of the Categories you can choose from
        - Display is a GridPane with Radio Buttons added in it for each Category
        - Each option has a radio button with a toggle group so user can only choose one
        - Available categories are pulled from the enum Category class so the options are created dynamically
          depending on the number of enum options in Category
    - On submit, Category is properly stored in the db
- Quiz Selection Page
    - Gives user a list of Categories to choose from
        - list is genera