@@ -2,10 +2,10 @@ package app.services;
 
 public class InputHandler {
 
-    public static boolean verifyNumberOfQs(String input){
+    public static boolean verifyNumberOfQs(String input, int maximum){
         try {
             int amount = Integer.parseInt(input);
-            if(amount > 0 && amount <= SqlCaller.getDBSize()){
+            if(amount > 0 && amount <= maximum){
                 return true;
             } else {
                 return false;
