@@ -37,6 +37,35 @@ public class SqlCaller {
         return questionList;
     }
 
+    public static List<Question> getAllSelectedQuestions(List<String> categories){
+        StringBuilder sql = new StringBuilder("select * from question where");
+        List<Question> questionList = new ArrayList<>();
+        for(String category : categories){
+            if(categories.indexOf(category) == categories.size() - 1){
+                sql.append(" category=\"").append(category).append("\"");
+            } else {
+                sql.append(" category=\"").append(category).append("\" or");
+            }
+        }
+
+        try {
+            PreparedStatement preparedStatement = con.prepareStatement(sql.toString());
+            ResultSet resultSet = preparedStatement.executeQuery();
+            while (resultSet.next()){
+                int questionId = Integer.parseInt(resultSet.getObject("id").toString());
+                String question = resultSet.getObject("question").toString();
+                String correctAnswer = resultSet.getObject("correctAnswer").toString();
+                List<String> choices = getQuestionChoices(questionId);
+                Category category = Category.valueOf(resultSet.getObject("category").toString());
+                Question questionToAdd = new Question(questionId, question, choices, correctAnswer, category);
+                questionList.add(questionToAdd);
+            }
+        } catch (SQLException throwables) {
+            throwables.printStackTrace();
+        }
+        return questionList;
+    }
+
     public static Question getQuestionById(int questionId){
         String sql = "select * from question where id = " + questionId;
         Question questionToAdd = new Question();
@@ -80,7 +109,7 @@ public class SqlCaller {
             String sql = "INSERT INTO quizdb.question (`id`, `question`, `correctAnswer`, `choicesId`, `category`) VALUES ('" + id + "', '" + question + "', '" + correctAnswer + "', '" + id + "', '" + category.toString() + "')";
             PreparedStatement preparedStatement = con.prepareStatement(sql);
             int result = preparedStatement.executeUpdate();
-            con.close();
+//            con.close();
             addQuestionChoicesToDB(id, choices);
         } catch (SQLException throwables) {
             throwables.printStackTrace();
@@ -91,9 +120,10 @@ public class SqlCaller {
     public static void addQuestionChoicesToDB(int id, List<String> choices){
         try {
             String sql = "INSERT INTO quizdb.choices (`id`, `choice1`, `choice2`, `choice3`, `choice4`) VALUES ('" + id + "', '" + choices.get(0) + "', '" + choices.get(1) + "', '" + choices.get(2) + "', '" + choices.get(3) + "')";
-            con = ConnectionUtil.conDB();
+//            con = ConnectionUtil.conDB();
             PreparedStatement preparedStatement = con.prepareStatement(sql);
             int result = preparedStatement.executeUpdate();
+//            con.close();
         } catch (Exception exception){
             exception.printStackTrace();
         }
